<resources>
    <string name="app_name">Cafetone</string>
    <string name="jamesdsp" translatable="false">JamesDSP</string>
    <string name="action_settings">Settings</string>
    <string name="action_presets">Presets</string>
    <string name="action_revert">Reset to defaults</string>
    <string name="action_blocked_apps">Excluded apps</string>
    <string name="notification_group_service">Service</string>
    <string name="notification_channel_service">Service notification</string>
    <string name="notification_channel_session_loss_alert">Session loss alert</string>
    <string name="notification_channel_permission_prompt">Permission prompt request</string>
    <string name="notification_channel_app_compat_alert">Incompatible app alert</string>
    <string name="notification_group_backup">Backup and restore</string>
    <string name="notification_channel_backup_progress">In progress</string>
    <string name="notification_channel_backup_complete">Complete</string>
    <string name="action_retry">Retry</string>
    <string name="action_fix">Fix issue</string>
    <string name="action_stop">Stop</string>
    <string name="notification_processing">Active apps: %1$s</string>
    <string name="notification_idle">Audio processing idle</string>
    <string name="notification_processing_title">Audio processing active</string>
    <string name="notification_processing_disabled_title">Audio processing disabled</string>
    <string name="notification_processing_legacy">Tap to open JamesDSP manager</string>
    <string name="notification_request_permission_title">User action is required to launch JamesDSP</string>
    <string name="notification_request_permission">Tap to grant capture permission and enable JamesDSP\'s audio processing</string>
    <string name="session_control_loss_toast">JamesDSP stopped due to audio session control loss. Please disable other audio effect apps.</string>
    <string name="session_control_loss_notification_title">Audio processing stopped. Another app is interfering with JamesDSP.</string>
    <string name="session_control_loss_notification">Please disable all other apps that provide global audio effects before re-enabling JamesDSP.</string>
    <string name="session_app_compat_toast">JamesDSP stopped due to incompatible media app. Please check the notification to resolve this problem.</string>
    <string name="session_app_compat_notification_title">Audio processing stopped. Another app is interfering with JamesDSP.</string>
    <string name="session_app_compat_notification">Tap this notification to resolve the problem.</string>
    <string name="capture_permission_revoked_toast">JamesDSP has been stopped because the audio capture permission was revoked.</string>
    <string name="install">Install</string>
    <string name="update">Update</string>
    <string name="unknown_error">Unknown error</string>
    <string name="details">Details</string>
    <string name="actions">Actions</string>
    <string name="warning">Warning</string>
    <string name="success">Success</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="continue_action">Continue</string>
    <string name="tutorial">Tutorial</string>
    <string name="never_show_warning_again">Never show this warning again</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="value_not_set">Not set</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="no_activity_found">No Activity found to handle action</string>
    <string name="permission_allowed">Allowed</string>
    <string name="permission_not_allowed">Not allowed</string>
    <string name="preparing">Preparing…</string>
    <string name="error_projection_api_missing">Your device manufacturer has disabled the internal audio recording APIs. This application cannot work without them.</string>
    <string name="power_button_alt">Toggle audio processing</string>
    <string name="compander_enable">Dynamic range compander</string>
    <string name="compander_timeconstant">Time constant</string>
    <string name="compander_granularity">Granularity</string>
    <string name="compander_granularity_very_low">Very low</string>
    <string name="compander_granularity_low">Low</string>
    <string name="compander_granularity_medium">Medium</string>
    <string name="compander_granularity_high">High</string>
    <string name="compander_granularity_extreme">Extreme</string>
    <string name="compander_tftransforms">Time-frequency transform</string>
    <string name="compander_tftransforms_stft">Uniform (Short-time Fourier)</string>
    <string name="compander_tftransforms_continuous_wavelet">Multiresolution (Continuous wavelet, incomplete dual frame)</string>
    <string name="compander_tftransforms_undersampling">Pseudo multiresolution (Undersampling frame)</string>
    <string name="compander_tftransforms_time_domain">Pseudo multiresolution (Time domain, zero latency)</string>
    <string name="eq_enable">Multimodal equalizer</string>
    <string name="eq_filter_type">Filter type</string>
    <string name="eq_interpolator">Interpolator</string>
    <string name="eq_filter_type_fir_minimum">FIR Minimum phase</string>
    <string name="eq_filter_type_iir_4_order">IIR 4th order</string>
    <string name="eq_filter_type_iir_6_order">IIR 6th order</string>
    <string name="eq_filter_type_iir_8_order">IIR 8th order</string>
    <string name="eq_filter_type_iir_10_order">IIR 10th order</string>
    <string name="eq_filter_type_iir_12_order">IIR 12th order</string>
    <string name="eq_interpolator_chip">Piecewise Cubic Hermite Interpolating Polynomial</string>
    <string name="eq_interpolator_mha">Modified Hiroshi Akima spline</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass">Bass</string>
    <string name="eq_preset_beats">Beats</string>
    <string name="eq_preset_classic">Classic</string>
    <string name="eq_preset_clear">Clear</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_dubstep">Dubstep</string>
    <string name="eq_preset_electronic">Electronic</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_hardstyle">Hardstyle</string>
    <string name="eq_preset_hiphop">Hip-Hop</string>
    <string name="eq_preset_jazz">Jazz</string>
    <string name="eq_preset_metal">Metal</string>
    <string name="eq_preset_movie">Movie</string>
    <string name="eq_preset_pop">Pop</string>
    <string name="eq_preset_rb">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_vocal">Vocal Booster</string>
    <string name="geq_enable">Arbitrary response equalizer</string>
    <string name="geq_nodes">Magnitude response</string>
    <string name="bass_enable">Dynamic bass boost</string>
    <string name="bass_max_gain">Maximum gain</string>
    <string name="reverb_enable">Virtual room effect</string>
    <string name="reverb_room_type">Room type</string>
    <string name="reverb_preset_default">Default</string>
    <string name="reverb_preset_small_hall1">Small hall 1</string>
    <string name="reverb_preset_small_hall2">Small hall 2</string>
    <string name="reverb_preset_medium_hall2">Medium hall</string>
    <string name="reverb_preset_large_hall1">Large hall</string>
    <string name="reverb_preset_small_room1">Small room 1</string>
    <string name="reverb_preset_small_room2">Small room 2</string>
    <string name="reverb_preset_medium_room1">Medium room</string>
    <string name="reverb_preset_large_room1">Large room</string>
    <string name="reverb_preset_plate_high">Plate high</string>
    <string name="reverb_preset_plate_low">Plate low</string>
    <string name="reverb_preset_long_reverb1">Long reverb 1</string>
    <string name="reverb_preset_long_reverb2">Long reverb 2</string>
    <string name="convolver_enable">Convolver</string>
    <string name="convolver_impulse">Impulse response</string>
    <string name="convolver_advanced_editing">Advanced waveform editing</string>
    <string name="convolver_convolution_mode">Impulse response optimization</string>
    <string name="convolver_convolution_mode_original">Original</string>
    <string name="convolver_convolution_mode_shrink">Shrink</string>
    <string name="convolver_convolution_mode_minimum_phase_shrink">Minimum phase transform and shrink</string>
    <string name="ddc_enable">ViPER-DDC</string>
    <string name="ddc_file">DDC file</string>
    <string name="liveprog_enable">Live programmable DSP</string>
    <string name="liveprog_file">Liveprog script</string>
    <string name="liveprog_additional_params">Additional script parameters</string>
    <string name="liveprog_additional_params_not_supported">Selected script has no customizable parameters</string>
    <string name="liveprog_not_found">Script not found</string>
    <string name="liveprog_no_script_selected">No script selected</string>
    <string name="liveprog_edit_header">Edit selected script</string>
    <string name="liveprog_edit">Open active script in built-in editor</string>
    <string name="tube_enable">Analog modelling</string>
    <string name="tube_drive">Preamp</string>
    <string name="output_control_header">Output control</string>
    <string name="output_limiter_threshold">Limiter threshold</string>
    <string name="output_limiter_release">Limiter release</string>
    <string name="output_control_postgain">Post gain</string>
    <string name="stereowide_enable">Soundstage wideness</string>
    <string name="stereowide_level">Wideness</string>
    <string name="stereowide_level_none">None</string>
    <string name="stereowide_level_very_wide">Very wide</string>
    <string name="stereowide_level_wide">Wide</string>
    <string name="stereowide_level_very_narrow">Very narrow</string>
    <string name="stereowide_level_narrow">Narrow</string>
    <string name="crossfeed_enable">Crossfeed</string>
    <string name="crossfeed_preset">Preset</string>
    <string name="crossfeed_preset_bs2b_weak">BS2B Weak</string>
    <string name="crossfeed_preset_bs2b_strong">BS2B Strong</string>
    <string name="crossfeed_preset_out_of_head">Out of head</string>
    <string name="crossfeed_preset_surround1">Surround 1</string>
    <string name="crossfeed_preset_surround2">Surround 2</string>
    <string name="crossfeed_preset_realistic_surround">Joe0Bloggs Realistic surround</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="onboarding_back">Back</string>
    <string name="onboarding_next">Next</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_greeting">Welcome to RootlessJamesDSP!</string>
    <string name="onboarding_caption">This assistant will help you to set-up this app.</string>
    <string name="onboarding_warning">Currently, this application is unfinished and unstable. Please note that it may not work on some devices as expected since it uses Android APIs not designed for use by third parties.</string>
    <string name="cafe_mode_welcome">Welcome to Cafetone</string>
    <string name="cafe_mode_description">Transform your audio into a cozy café experience with three simple controls</string>
    <string name="intensity">Intensity</string>
    <string name="intensity_description">Control the overall café effect strength</string>
    <string name="spatial_width">Spatial Width</string>
    <string name="spatial_width_description">Adjust the stereo positioning and spatial width</string>
    <string name="distance">Distance</string>
    <string name="distance_description">Simulate the perceived distance from the audio source</string>
</resources>